# gazelle-strip-import-prefix-index-off

./: BUILD.bazel  README.md
prefix/foo/: BUILD.bazel  foo.proto
prefix/moo/: BUILD.bazel
